--- a/src/main/webapp/authorizer-app/src/app/components/add-device-dialog/add-device-dialog.component.html
+++ b/src/main/webapp/authorizer-app/src/app/components/add-device-dialog/add-device-dialog.component.html
@@ -1,7 +1,57 @@
-<mat-dialog-content>
-  Content goes here
+<h2 mat-dialog-title>{{description}}</h2>
+
+
+<mat-dialog-content [formGroup]="form">
+
+  <mat-form-field>
+
+    <input matInput
+           placeholder="Course Description"
+           formControlName="description">
+
+  </mat-form-field>
+
+  <mat-form-field>
+
+    <mat-select placeholder="Select category"
+                formControlName="category">
+
+      <mat-option value="BEGINNER">
+        Beginner</mat-option>
+      <mat-option value="INTERMEDIATE">
+        Intermediate</mat-option>
+      <mat-option value="ADVANCED">
+        Advanced</mat-option>
+
+    </mat-select>
+
+  </mat-form-field>
+
+  <mat-slide-toggle formControlName="promo">Promotion On</mat-slide-toggle>
+
+
+  <mat-form-field>
+
+        <textarea matInput placeholder="Description"
+                  formControlName="longDescription">
+
+        </textarea>
+
+  </mat-form-field>
+
+
 </mat-dialog-content>
+
 <mat-dialog-actions>
-  <button mat-button>Add</button>
-  <button mat-button>Cancel</button>
+
+  <button class="mat-raised-button"
+          (click)="close()">
+    Close
+  </button>
+
+  <button class="mat-raised-button mat-primary"
+          (click)="save()">
+    Save
+  </button>
+
 </mat-dialog-actions>
