--- a/src/main/webapp/authorizer-app/src/app/components/devices-header/devices-header.component.html
+++ b/src/main/webapp/authorizer-app/src/app/components/devices-header/devices-header.component.html
@@ -3,6 +3,6 @@
     <mat-card-title><h1>RADAR-base Device Authorizer</h1></mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <button mat-raised-button (click)="addDevice()">Add device</button>
+    <button mat-raised-button (click)="openDialog()">Add device</button>
   </mat-card-content>
 </mat-card>
