add simple front-end

--- a/src/main/webapp/authorizer-app/src/app/app.component.html
+++ b/src/main/webapp/authorizer-app/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div style="text-align:center">
-  <app-devices-header></app-devices-header>
-  <app-devices-table></app-devices-table>
+  <h2>Here</h2>
+  <router-outlet></router-outlet>
 </div>
