--- a/src/main/webapp/authorizer-app/src/app/components/device-authorization/device-user-registration-form.component.html
+++ b/src/main/webapp/authorizer-app/src/app/components/device-authorization/device-user-registration-form.component.html
@@ -11,5 +11,5 @@
   <input type="hidden" name="state" [value]="deviceAuthDetail.deviceType"/>
   <input type="hidden" name="scope" [value]="deviceAuthDetail.scope"/>
   <!--<input type="hidden" name="redirect_uri" [value]="callbackUrl"/>-->
-  <button type="submit" class="device-button">Request to authorize</button>
+  <button type="submit" class="deviceUser-button">Request to addAuthorizedUser</button>
 </form>
