add API to get token and refresh token

--- a/src/main/webapp/authorizer-app/src/app/components/device-authorization/add-device.component.html
+++ b/src/main/webapp/authorizer-app/src/app/components/device-authorization/add-device.component.html
@@ -11,6 +11,6 @@
       <label>Project Id: </label>
       <input type="text" [(ngModel)]="deviceUser.projectId" name="projectId">
     </div>
-    <button (click)="updateDeviceUser()"> Update DeviceUser details</button>
+    <button (click)="updateDeviceUser()"> Update User details</button>
   </div>
 </form>
