--- a/src/main/webapp/authorizer-app/src/app/components/device-authorization/devices-list.component.html
+++ b/src/main/webapp/authorizer-app/src/app/components/device-authorization/devices-list.component.html
@@ -1,20 +1,6 @@
 <div>
   <alert-comp></alert-comp>
-
-  <p>
-    <button type="button" class="btn btn-primary" (click)="isCollapsed = !isCollapsed"
-            [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
-      Add new device
-    </button>
-  </p>
-  <div id="collapseExample" [ngbCollapse]="isCollapsed">
-    <div class="card">
-      <div class="card-body">
-        <user-registration-form></user-registration-form>
-      </div>
-    </div>
-  </div>
-
+  <user-registration-form></user-registration-form>
   <div class="container table-responsive"  *ngIf="devices">
     <table class="table table-hover table-striped ">
       <thead>
@@ -36,8 +22,8 @@
         <td>{{deviceUser.projectId}}</td>
         <td>{{deviceUser.userId}}</td>
         <td>{{deviceUser.sourceId}}</td>
-        <td>{{deviceUser.startDate}}</td>
-        <td>{{deviceUser.endDate}}</td>
+        <td>{{deviceUser.startDate | date:'dd/MM/yyyy'}}</td>
+        <td>{{deviceUser.endDate | date:'dd/MM/yyyy'}}</td>
         <td>{{deviceUser.externalUserId}}</td>
         <td>{{deviceUser.authorized}}</td>
         <td class="text-right">
@@ -47,19 +33,5 @@
       </tbody>
     </table>
   </div>
-
-  <!--<ngb-tabset>-->
-  <!--<ngb-tab title="View Device Users">-->
-    <!--<ng-template ngbTabContent>-->
-
-    <!--</ng-template>-->
-  <!--</ngb-tab>-->
-  <!--<ngb-tab>-->
-    <!--<ng-template ngbTabTitle><b>Add</b> new device</ng-template>-->
-    <!--<ng-template ngbTabContent>-->
-      <!--<user-registration-form></user-registration-form>-->
-    <!--</ng-template>-->
-  <!--</ngb-tab>-->
-  <!--</ngb-tabset>-->
 </div>
 
