--- a/src/main/webapp/authorizer-app/src/app/components/device-authorization/add-device.component.html
+++ b/src/main/webapp/authorizer-app/src/app/components/device-authorization/add-device.component.html
@@ -4,14 +4,22 @@
   <h3> Enter details for User with External User Id: {{deviceUser.externalUserId}}</h3>
   <form>
 
+
+
+    <div class="form-group">
+      <label for="projectId">Project Id: </label>
+      <input class="form-control" name="projectId" type="text" [(ngModel)]="deviceUser.projectId" id="projectId">
+    </div>
+
     <div class="form-group">
       <label for="userId">User Id: </label>
       <input class="form-control" name="userId" type="text" [(ngModel)]="deviceUser.userId" id="userId">
     </div>
 
+
     <div class="form-group">
-      <label for="projectId">Project Id: </label>
-      <input class="form-control" name="projectId" type="text" [(ngModel)]="deviceUser.projectId" id="projectId">
+      <label for="sourceId">Source Id: </label>
+      <input class="form-control" name="sourceId" type="text" [(ngModel)]="deviceUser.sourceId" id="sourceId">
     </div>
 
     <div class="form-group">
