add default input option

--- a/authorizer-app/src/app/app.component.html
+++ b/authorizer-app/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div style="text-align:center">
-  <h1>Welcome to RADAR-Base Device Authorizer</h1>
+  <h1>Welcome to RADAR-Base REST Source Authorizer</h1>
   <router-outlet></router-outlet>
 </div>
