--- a/authorizer-app/src/app/components/device-authorization/device-user-registration-form.component.html
+++ b/authorizer-app/src/app/components/device-authorization/device-user-registration-form.component.html
@@ -3,6 +3,7 @@
     <label for="field_deviceType">Select device type : </label>
       <select class="form-control" id="field_deviceType" formControlName="selectedDeviceType"
               (change)="onChange($event.target.value)">
+        <option selected disabled value="">-- select a third party service --</option>
         <option [value]="deviceType" *ngFor="let deviceType of deviceTypes">{{deviceType}}</option>
       </select>
   </div>
