--- a/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
@@ -1,21 +1,21 @@
 <ngb-alert *ngIf="errorMessage" type="danger" (close)="errorMessage = null">{{ errorMessage}}</ngb-alert>
-<div *ngIf="deviceUser" class="container col-md-3">
-  <h3> Enter details for User with External User Id: {{deviceUser.externalUserId}}</h3>
+<div *ngIf="restSourceUser" class="container col-md-3">
+  <h3> Enter details for User with External User Id: {{restSourceUser.externalUserId}}</h3>
   <form>
     <div class="form-group">
       <label for="projectId">Project Id: </label>
-      <input class="form-control" name="projectId" type="text" [(ngModel)]="deviceUser.projectId" id="projectId"  placement="top" ngbTooltip="Project name from ManagementPortal">
+      <input class="form-control" name="projectId" type="text" [(ngModel)]="restSourceUser.projectId" id="projectId"  placement="top" ngbTooltip="Project name from ManagementPortal">
     </div>
 
     <div class="form-group">
       <label for="userId">User Id: </label>
-      <input class="form-control" name="userId" type="text" [(ngModel)]="deviceUser.userId" id="userId" placement="top" ngbTooltip="Subject Id from ManagementPortal">
+      <input class="form-control" name="userId" type="text" [(ngModel)]="restSourceUser.userId" id="userId" placement="top" ngbTooltip="Subject Id from ManagementPortal">
     </div>
 
 
     <div class="form-group">
       <label for="sourceId">Source Id: </label>
-      <input class="form-control" name="sourceId" disabled type="text" [(ngModel)]="deviceUser.sourceId" id="sourceId">
+      <input class="form-control" name="sourceId" disabled type="text" [(ngModel)]="restSourceUser.sourceId" id="sourceId">
     </div>
 
     <div class="form-group">
@@ -40,6 +40,6 @@
       </div>
     </div>
 
-    <button type="button" (click)="updateDeviceUser()" class="btn btn-success">Submit</button>
+    <button type="button" (click)="updateRestSourceUser()" class="btn btn-success">Submit</button>
   </form>
 </div>
