add editing feature to users. allow editing of projectId, startDate and EndDate.

--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
@@ -14,6 +14,7 @@
         <th><span>External User Id</span></th>
         <th><span>Authorized</span></th>
         <th></th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -26,6 +27,9 @@
         <td>{{restSourceUser.endDate | date:'dd/MM/yyyy'}}</td>
         <td>{{restSourceUser.externalUserId}}</td>
         <td>{{restSourceUser.authorized}}</td>
+        <td class="text-right">
+          <button class="btn btn-primary"  [routerLink]="['/users', restSourceUser.id]">Edit</button>
+        </td>
         <td class="text-right">
           <button class="btn btn-danger" (click)="removeDevice(restSourceUser)">Delete</button>
         </td>
