--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
@@ -1,40 +1,74 @@
 <div>
   <ngb-alert *ngIf="errorMessage" type="danger" (close)="errorMessage = null">{{ errorMessage}}</ngb-alert>
   <rest-source-user-registration-form></rest-source-user-registration-form>
-  <div class="container table-responsive"  *ngIf="restSourceUsers">
-    <table class="table table-hover table-striped ">
-      <thead>
-      <tr>
-        <th><span>Id</span></th>
-        <th><span>Project Id</span></th>
-        <th><span>User Id</span></th>
-        <th><span>Source Id</span></th>
-        <th><span>Start Date</span></th>
-        <th><span>End Date</span></th>
-        <th><span>External User Id</span></th>
-        <th><span>Authorized</span></th>
-        <th></th>
-        <th></th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let restSourceUser of restSourceUsers">
-        <td>{{restSourceUser.id}}</td>
-        <td>{{restSourceUser.projectId}}</td>
-        <td>{{restSourceUser.userId}}</td>
-        <td>{{restSourceUser.sourceId}}</td>
-        <td>{{restSourceUser.startDate | date:'dd/MM/yyyy'}}</td>
-        <td>{{restSourceUser.endDate | date:'dd/MM/yyyy'}}</td>
-        <td>{{restSourceUser.externalUserId}}</td>
-        <td>{{restSourceUser.authorized}}</td>
-        <td class="text-right">
-          <button class="btn btn-primary"  [routerLink]="['/users', restSourceUser.id]">Edit</button>
-        </td>
-        <td class="text-right">
-          <button class="btn btn-danger" (click)="removeDevice(restSourceUser)">Delete</button>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+
+  <div>
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-table [dataSource]="dataSource" matSort>
+
+      <ng-container matColumnDef="id">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
+          <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="projectId">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Project ID </mat-header-cell>
+          <mat-cell *matCellDef="let row"> {{row.projectId}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="userId">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> User ID </mat-header-cell>
+          <mat-cell *matCellDef="let row"> {{row.userId}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="sourceId">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Source ID </mat-header-cell>
+          <mat-cell *matCellDef="let row"> {{row.sourceId}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="startDate">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </mat-header-cell>
+          <mat-cell *matCellDef="let row"> {{row.startDate}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="endDate">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> End Date </mat-header-cell>
+          <mat-cell *matCellDef="let row"> {{row.endDate}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="externalUserId">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> External User Id </mat-header-cell>
+          <mat-cell *matCellDef="let row"> {{row.externalUserId}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="authorized">
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Authorized </mat-header-cell>
+          <mat-cell *matCellDef="let row"> {{row.authorized}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="edit">
+        <mat-header-cell  *matHeaderCellDef > Edit </mat-header-cell>
+        <mat-cell *matCellDef="let row">
+            <button mat-raised-button color="primary" [routerLink]="['/users', row.id]">Edit</button>
+        </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="delete">
+        <mat-header-cell  *matHeaderCellDef > Delete </mat-header-cell>
+        <mat-cell *matCellDef="let row">
+            <button mat-raised-button	color="warn" (click)="removeDevice(row)">Delete</button>
+        </mat-cell>
+      </ng-container>
+
+      <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;">
+      </mat-row>
+    </mat-table>
+
+  <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
   </div>
 </div>
