--- a/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
@@ -1,45 +1,74 @@
-<ngb-alert *ngIf="errorMessage" type="danger" (close)="errorMessage = null">{{ errorMessage}}</ngb-alert>
+<ngb-alert *ngIf="errorMessage" type="danger"
+           (close)="errorMessage = null">{{ errorMessage}}</ngb-alert>
 <div *ngIf="restSourceUser" class="container col-md-3">
   <h3> Enter details for User with External User Id: {{restSourceUser.externalUserId}}</h3>
-  <form>
+  <form #userForm="ngForm">
     <div class="form-group">
       <label for="projectId">Project Id: </label>
-      <input class="form-control" name="projectId" type="text" [(ngModel)]="restSourceUser.projectId" id="projectId"  placement="top" ngbTooltip="Project name from ManagementPortal">
+      <input class="form-control" name="projectId" type="text"
+             [(ngModel)]="restSourceUser.projectId" #projectId="ngModel"
+             id="projectId" placement="top" ngbTooltip="Project name from ManagementPortal"
+             required minlength="4">
     </div>
 
     <div class="form-group">
       <label for="userId">User Id: </label>
-      <input class="form-control" name="userId" [disabled]="isEditing" type="text" [(ngModel)]="restSourceUser.userId" id="userId" placement="top" ngbTooltip="Subject Id from ManagementPortal">
+      <input class="form-control" name="userId" [disabled]="isEditing" type="text"
+             [(ngModel)]="restSourceUser.userId" #userId="ngModel"
+             id="userId" placement="top" ngbTooltip="Subject Id from ManagementPortal"
+             required minlength="4"
+             pattern="[a-z0-9]{8}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{12}">
     </div>
 
+    <div
+      *ngIf="(userId.invalid && (userId.dirty || userId.touched)) || (projectId.invalid && (projectId.dirty || projectId.touched))"
+      class="alert alert-danger">
+
+      <div *ngIf="userId.errors?.required || projectId.errors?.required">
+        Project and User Id is required.
+      </div>
+      <div *ngIf="userId.errors?.minlength || projectId.errors?.minlength">
+        Project and User Id must be at least 4 characters long.
+      </div>
+      <div *ngIf="userId.errors?.pattern">
+        The pattern of the entered User Id is not correct.
+      </div>
+    </div>
 
     <div class="form-group">
       <label for="sourceId">Source Id: </label>
-      <input class="form-control" name="sourceId" disabled type="text" [(ngModel)]="restSourceUser.sourceId" id="sourceId">
+      <input class="form-control" name="sourceId" disabled type="text"
+             [(ngModel)]="restSourceUser.sourceId" id="sourceId">
     </div>
 
     <div class="form-group">
       <label for="startDate">Start Date: </label>
-      <div class="input-group" placement="top" ngbTooltip="Start date to collect data from this source">
+      <div class="input-group" placement="top"
+           ngbTooltip="Start date to collect data from this source">
         <input id="startDate" class="form-control" placeholder="yyyy-mm-dd"
                name="startDate" [(ngModel)]="startDate" ngbDatepicker #e="ngbDatepicker">
         <div class="input-group-append">
-          <button class="btn btn-outline-secondary calendar" (click)="e.toggle()" type="button" ></button>
+          <button class="btn btn-outline-secondary calendar" (click)="e.toggle()"
+                  type="button"></button>
         </div>
       </div>
     </div>
 
     <div class="form-group">
       <label for="endDate">End Date: </label>
-      <div class="input-group" placement="top" ngbTooltip="End date to collect data from this source">
+      <div class="input-group" placement="top"
+           ngbTooltip="End date to collect data from this source">
         <input id="endDate" class="form-control" placeholder="yyyy-mm-dd"
                name="endDate" [(ngModel)]="endDate" ngbDatepicker #d="ngbDatepicker">
         <div class="input-group-append">
-          <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+          <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
+                  type="button"></button>
         </div>
       </div>
     </div>
 
-    <button type="button" (click)="updateRestSourceUser()" class="btn btn-success">Submit</button>
+    <button [disabled]="!userForm.valid" type="button" (click)="updateRestSourceUser()"
+            class="btn btn-success">Submit
+    </button>
   </form>
 </div>
