--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.css
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.css
@@ -3,10 +3,22 @@
 }
 
 .mat-cell {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
   align-content: center;
   text-align: center;
+  overflow: auto;
+}
+
+.reset-info {
+  margin-left: 5px;
+  margin-right: 5px;
+  align-content: center;
+  text-align: start;
+  overflow: auto;
+  overflow-wrap: normal;
+  white-space: nowrap;
+  width: 60px;
 }
 
 .mat-header-cell {
@@ -16,4 +28,9 @@
   text-align: center;
   font-size: 16px;
   font-weight: bold;
+}
+
+.mat-table {
+  width: 100%;
+  overflow: auto;
 }
