--- a/authorizer-app/src/app/app.component.css
+++ b/authorizer-app/src/app/app.component.css
@@ -1,1 +1,1 @@
-@import 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css';
+@import "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css";
