--- a/authorizer-app/src/app/components/shared/toolbar/toolbar.component.html
+++ b/authorizer-app/src/app/components/shared/toolbar/toolbar.component.html
@@ -1,11 +1,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <div class="logo-wrapper">
-      <img
-        class="logo"
-        src="../../../../assets/radar-logo.svg"
-        alt="RADAR-base Logo"
-      />
+      <img class="logo" src="./assets/radar-logo.svg" alt="RADAR-base Logo" />
     </div>
     <span class="title">Welcome to RADAR-Base REST Source Authorizer</span>
     <ng-container *ngIf="showMenu">
