Separate mp auth and simple auth: - Add simple auth service to allow no auth - Separate simple login and mp login components - Add factory to determine which auth to use from env var

--- a/authorizer-app/src/app/components/auth/login-page.component.css
+++ b/authorizer-app/src/app/components/auth/login-page.component.css
@@ -10,5 +10,18 @@ button {
 }
 
 .btn-container {
+  justify-content: center;
   text-align: center;
+}
+
+.loading {
+  display: flex;
+  flex: 1 1 0;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.desc {
+  margin: 24px;
 }
