Modify toolbar, change title and logo

--- a/authorizer-app/src/app/components/shared/toolbar/toolbar.component.html
+++ b/authorizer-app/src/app/components/shared/toolbar/toolbar.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <div class="logo-wrapper">
-      <img class="logo" src="./assets/radar-logo.svg" alt="RADAR-base Logo" />
+      <img class="logo" src="./assets/chdr_logo.png" alt="CHDR Logo" />
     </div>
-    <span class="title">Welcome to RADAR-Base REST Source Authorizer</span>
+    <span class="title">CHDR MORE&reg; REST Source Authorizer</span>
     <ng-container *ngIf="showMenu">
       <button
         mat-icon-button
