--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
@@ -1,127 +1,91 @@
 <toolbar [showMenu]="true"></toolbar>
 
 <div class="page-container">
-  <ngb-alert *ngIf="errorMessage" type="danger" (close)="errorMessage = null">{{
-    errorMessage
-  }}</ngb-alert>
-  <rest-source-user-registration-form></rest-source-user-registration-form>
 
-  <div>
-    <mat-form-field>
-      <input
-        matInput
-        (keyup)="applyFilter($event.target.value)"
-        placeholder="Filter"
-      />
-    </mat-form-field>
+  <ngb-alert *ngIf="errorMessage" type="danger" (close)="errorMessage = null">
+    {{errorMessage}}
+  </ngb-alert>
+
+  <div class="container col-md-4">
+    <rest-source-user-registration-form></rest-source-user-registration-form>
+
+    <form class="form-group">
+      <div class="container text-center">
+        <label for="field_projects">Project:</label>
+        <select class="form-control" id="field_projects"
+                (change)="onChangeProject($event.target.value)">
+          <option  value="">Select a project</option>
+          <option [selected]="project.id===selectedProject" [value]="project.id" *ngFor="let project of restSourceProjects">{{project.id}}</option>
+        </select>
+      </div>
+    </form>
   </div>
-  <div>
-    <mat-table [dataSource]="dataSource" matSort>
+
+  <div *ngIf="selectedProject && selectedProject!==''" class="users-container">
+
+    <mat-form-field class="container col-md-4">
+      <label>
+        <input
+          matInput
+          (keyup)="applyFilter($event.target.value)"
+          placeholder="Filter by ID, User ID or External User ID"
+        />
+      </label>
+    </mat-form-field>
+
+    <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          Id
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{ row.id }} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let user"> {{user.id}} </td>
       </ng-container>
-
-      <ng-container matColumnDef="projectId">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          Project ID
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{ row.projectId }} </mat-cell>
-      </ng-container>
-
       <ng-container matColumnDef="userId">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          User ID
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{ row.userId }} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> User ID </th>
+        <td mat-cell *matCellDef="let user"> {{user.userId |  slice:0:8 }}... </td>
       </ng-container>
-
-      <ng-container matColumnDef="sourceId">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          Source ID
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{ row.sourceId }} </mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="startDate">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          Start Date
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{ row.startDate }} </mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="endDate">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          End Date
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{ row.endDate }} </mat-cell>
-      </ng-container>
-
       <ng-container matColumnDef="externalUserId">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          External User Id
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{ row.externalUserId }} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> External User ID </th>
+        <td mat-cell *matCellDef="let user"> {{user.externalUserId}} </td>
       </ng-container>
-
+      <ng-container matColumnDef="startDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
+        <td mat-cell *matCellDef="let user"> {{user.startDate | date}} </td>
+      </ng-container>
+      <ng-container matColumnDef="endDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
+        <td mat-cell *matCellDef="let user"> {{user.endDate | date}} </td>
+      </ng-container>authorized
       <ng-container matColumnDef="authorized">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          Authorized
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{ row.authorized }} </mat-cell>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Authorized </th>
+        <td mat-cell *matCellDef="let user"> {{user.isAuthorized? "Yes":"No"}} </td>
       </ng-container>
-
-      <ng-container matColumnDef="version">
-        <mat-header-cell *matHeaderCellDef> Reset Info </mat-header-cell>
-        <mat-cell class="reset-info" *matCellDef="let row"> <p>
-          <strong>Version:</strong> {{row.version}}
-          <br> <strong>Times Reset:</strong> {{row.timesReset}}
-        </p>
-        </mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="edit">
-        <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <button
-            mat-raised-button
-            color="primary"
-            [routerLink]="['/users', row.id]"
-          >
-            Edit
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let user">
+          <button mat-icon-button color="primary" [routerLink]="['/users', user.id]" ngbTooltip="Info">
+            <mat-icon>info</mat-icon>
           </button>
-        </mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="reset">
-        <mat-header-cell  *matHeaderCellDef > Reset </mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <button mat-raised-button matTooltip="This will re-pull all the data for this user"
-                  color="warn" (click)="openResetDialog(row)">Reset</button>
-        </mat-cell>
-      </ng-container>
-
-      <ng-container matColumnDef="delete">
-        <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <button mat-raised-button	color="warn" (click)="openDeleteDialog(row)">
-            Delete
+          <button mat-icon-button color="primary" [routerLink]="['/users', user.id]" ngbTooltip="Edit">
+            <mat-icon>edit</mat-icon>
           </button>
-        </mat-cell>
+          <button mat-icon-button ngbTooltip="Reset" matTooltip="This will re-pull all the data for this user"
+                  color="warn" (click)="openResetDialog(user)">
+            <mat-icon>replay</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" (click)="openDeleteDialog(user)" ngbTooltip="Delete">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
       </ng-container>
-
-      <mat-header-row
-        *matHeaderRowDef="displayedColumns; sticky: true"
-      ></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns"> </mat-row>
-    </mat-table>
+      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+      <tr mat-row *matRowDef="let rowData; columns: columnsToDisplay"></tr>
+    </table>
 
     <mat-paginator
       [pageSize]="20"
       [pageSizeOptions]="[5, 10, 20, 50]"
       showFirstLastButtons
     ></mat-paginator>
+
   </div>
+
 </div>
