--- a/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
@@ -1,78 +1,99 @@
-<ngb-alert *ngIf="errorMessage" type="danger"
-           (close)="errorMessage = null">{{ errorMessage}}</ngb-alert>
-<div *ngIf="restSourceUser" class="container col-md-3">
-  <h3> Enter details for User with External User Id: {{restSourceUser.externalUserId}}</h3>
-  <form #userForm="ngForm">
-    <div class="form-group">
-      <label for="projectId">Project Id: </label>
-      <input class="form-control" name="projectId" type="text"
-             [(ngModel)]="restSourceUser.projectId" #projectId="ngModel"
-             id="projectId" placement="top" ngbTooltip="Project name from ManagementPortal"
-             required minlength="4">
-    </div>
+<toolbar [showMenu]="true"></toolbar>
 
-    <div class="form-group">
-      <label for="userId">User Id: </label>
-      <input class="form-control" name="userId" [disabled]="isEditing" type="text"
-             [(ngModel)]="restSourceUser.userId" #userId="ngModel"
-             id="userId" placement="top" ngbTooltip="Subject Id from ManagementPortal"
-             required minlength="4"
-             pattern="[a-z0-9]{8}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{12}">
-    </div>
+<div class="container col-md-4">
+  <ngb-alert *ngIf="errorMessage" type="danger"
+             (close)="errorMessage = null">
+    {{ errorMessage}}
+  </ngb-alert>
+</div>
 
-    <div
-      *ngIf="(userId.invalid && (userId.dirty || userId.touched)) || (projectId.invalid && (projectId.dirty || projectId.touched))"
-      class="alert alert-danger">
+<div *ngIf="restSourceUser" class="container col-md-4">
+  <h3 *ngIf="!isEditing">Enter details for User</h3>
+  <h3 *ngIf="isEditing">Edit details for User</h3>
+  <div class="form-group">
+    <label for="externalUserId">External User ID:</label>
+    <input class="form-control" name="externalUserId" disabled type="text"
+           [(ngModel)]="restSourceUser.externalUserId" id="externalUserId">
+  </div>
 
-      <div *ngIf="userId.errors?.required || projectId.errors?.required">
-        Project and User Id is required.
-      </div>
-      <div *ngIf="userId.errors?.minlength || projectId.errors?.minlength">
-        Project and User Id must be at least 4 characters long.
-      </div>
-      <div *ngIf="userId.errors?.pattern">
-        The pattern of the entered User Id is not correct.
-      </div>
-    </div>
+  <div class="form-group">
+    <label for="sourceType">Source Type:</label>
+    <input class="form-control" name="sourceType" disabled type="text"
+           [(ngModel)]="restSourceUser.sourceType" id="sourceType">
+  </div>
 
-    <div class="form-group">
-      <label for="sourceId">Source Id: </label>
-      <input class="form-control" name="sourceId" disabled type="text"
-             [(ngModel)]="restSourceUser.sourceId" id="sourceId">
-    </div>
+  <div class="form-group">
+    <label for="projectId">Project ID:</label>
+    <select class="form-control" id="projectId" [(ngModel)]="restSourceUser.projectId" #projectId="ngModel" [disabled]="isEditing"
+            (change)="onChangeProject($event.target.value)">
+      <option [selected]="true" value="">Select a project</option>
+      <option [value]="project.id" *ngFor="let project of restSourceProjects">{{project.id}}</option>
+    </select>
+  </div>
 
-    <div class="form-group">
-      <label for="startDate">Start Date: </label>
-      <div class="input-group" placement="top"
-           ngbTooltip="Start date to collect data from this source">
-        <input id="startDate" class="form-control" placeholder="yyyy-mm-dd"
-               name="startDate" [(ngModel)]="startDate" ngbDatepicker #e="ngbDatepicker">
-        <div class="input-group-append">
-          <button class="btn btn-outline-secondary calendar" (click)="e.toggle()"
-                  type="button"></button>
-        </div>
-      </div>
-    </div>
+  <div class="form-group" *ngIf="restSourceUser.projectId">
+    <label for="userId">User ID:</label>
+    <select class="form-control" id="userId" [(ngModel)]="restSourceUser.userId" #userId="ngModel" [disabled]="isEditing">
+      <option [selected]="true" value="">Select a user</option>
+      <option [value]="user.userId" *ngFor="let user of restSourceUsers">{{user.userId}}</option>
+    </select>
+  </div>
 
-    <div class="form-group">
-      <label for="endDate">End Date: </label>
-      <div class="input-group" placement="top"
-           ngbTooltip="End date to collect data from this source">
-        <input id="endDate" class="form-control" placeholder="yyyy-mm-dd"
-               name="endDate" [(ngModel)]="endDate" ngbDatepicker #d="ngbDatepicker">
-        <div class="input-group-append">
-          <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
-                  type="button"></button>
-        </div>
+  <div class="form-group" *ngIf="restSourceUser.projectId">
+    <label for="sourceId">Source ID:</label>
+    <input class="form-control" name="sourceId" disabled type="text"
+           [(ngModel)]="restSourceUser.sourceId" id="sourceId">
+  </div>
+
+  <div class="form-group" *ngIf="restSourceUser.projectId">
+    <label for="startDate">Start Date:</label>
+    <div class="input-group" placement="top"
+         ngbTooltip="Start date to collect data from this source">
+      <input id="startDate" class="form-control" placeholder="yyyy-mm-dd"
+             required name="startDate" [(ngModel)]="startDate" ngbDatepicker #e="ngbDatepicker">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary calendar" (click)="e.toggle()"
+                type="button"></button>
       </div>
     </div>
+  </div>
 
-    <button type="button" (click)="cancelUpdateUser()" class="btn btn-outline-primary"
-            style="margin-right: 16px">Cancel
-    </button>
+  <div class="form-group" *ngIf="restSourceUser.projectId">
+    <label for="endDate">End Date:</label>
+    <div class="input-group" placement="top"
+         ngbTooltip="End date to collect data from this source">
+      <input id="endDate" class="form-control" placeholder="yyyy-mm-dd"
+             required name="endDate" [(ngModel)]="endDate" ngbDatepicker #d="ngbDatepicker">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
+                type="button"></button>
+      </div>
+    </div>
+  </div>
 
-    <button [disabled]="!userForm.valid" type="button" (click)="updateRestSourceUser()"
-            class="btn btn-success">Submit
-    </button>
-  </form>
+  <div class="form-group" *ngIf="isEditing">
+    <label for="isAuthorized">Authorized:</label>
+    <input class="form-control" name="isAuthorized" disabled type="text"
+           id="isAuthorized" [value]="restSourceUser.isAuthorized? 'Yes':'No'">
+  </div>
+
+  <div class="form-group" *ngIf="isEditing">
+    <label for="timesReset">Times Reset:</label>
+    <input class="form-control" name="timesReset" disabled type="text"
+           id="timesReset" [(ngModel)]="restSourceUser.timesReset">
+  </div>
+
+  <button *ngIf="!isEditing" type="button" (click)="cancelUpdateUser()" class="btn btn-outline-primary"
+          style="margin-right: 16px">Cancel
+  </button>
+  <button *ngIf="isEditing" type="button" (click)="backClicked()" class="btn btn-outline-primary"
+          style="margin-right: 16px">Cancel
+  </button>
+
+  <button *ngIf="!isEditing && restSourceUser.projectId" type="button" (click)="updateRestSourceUser()"
+                   class="btn btn-success">Submit
+  </button>
+  <button *ngIf="isEditing && restSourceUser.projectId" type="button" (click)="updateRestSourceUser()"
+          class="btn btn-success">Save
+  </button>
 </div>
