--- a/authorizer-app/src/styles.css
+++ b/authorizer-app/src/styles.css
@@ -2,3 +2,20 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
+
+.mat-cell {
+  align-content: start !important;
+  text-align: start !important;
+}
+.mat-header-cell {
+  align-content: start !important;
+  text-align: start !important;
+}
+
+.page-container{
+  padding: 1em;
+}
+
+.users-container{
+  margin-top:3em;
+}
