Revert back radar-base toolbar

--- a/authorizer-app/src/app/components/shared/toolbar/toolbar.component.html
+++ b/authorizer-app/src/app/components/shared/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <div class="logo-wrapper">
-      <img class="logo" src="./assets/chdr_logo.png" alt="CHDR Logo" />
+      <img class="logo" src="./assets/radar-logo.svg" alt="RADAR-base Logo" />
     </div>
     <span class="title">CHDR MORE&reg; REST Source Authorizer</span>
     <ng-container *ngIf="showMenu">
