--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list-reset-dialog.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list-reset-dialog.html
@@ -1,9 +1,10 @@
 <h1 mat-dialog-title>Reset User in project {{data.projectId}}?</h1>
 <div mat-dialog-content>
-  <p>This will pull all the data for the user (id: {{data.id}}, user-id: {{data.userId}}) again in the specified date range.
-  </p>
+  <p>This will pull all the data for the user (project: {{data.projectId}}, user-id: {{data.userId}} with external-user-id: {{data.externalUserId}}) again in the specified date range.</p>
+  <p>Are you sure you want to continue resetting?
+  <p>If yes, please proceed by pressing the <b>Ok</b> button.</p>
   <br>
-  <p>You can now change the date range if required:</p>
+  <p>Optionally, you can change the date range if required:</p>
   <mat-form-field>
     <input matInput [matDatepicker]="picker1" placeholder="Choose a Start Date"
            [formControl]="startDateFormControl" (dateChange)="updateStartDateValue($event)">
