--- a/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
@@ -35,7 +35,7 @@
     <label for="userId">User ID:</label>
     <select class="form-control" id="userId" [(ngModel)]="restSourceUser.userId" #userId="ngModel" [disabled]="isEditing">
       <option [selected]="true" value="">Select a user</option>
-      <option [value]="user.userId" *ngFor="let user of restSourceUsers">{{user.userId}}</option>
+      <option [value]="user.id" *ngFor="let user of subjects">{{user.id}}</option>
     </select>
   </div>
 
@@ -74,7 +74,7 @@
   <div class="form-group" *ngIf="isEditing">
     <label for="isAuthorized">Authorized:</label>
     <input class="form-control" name="isAuthorized" disabled type="text"
-           id="isAuthorized" [value]="restSourceUser.isAuthorized? 'Yes':'No'">
+           id="isAuthorized" [value]= "restSourceUser.isAuthorized? 'Yes':'No'">
   </div>
 
   <div class="form-group" *ngIf="isEditing">
