--- a/authorizer-app/src/app/components/shared/toolbar/toolbar.component.html
+++ b/authorizer-app/src/app/components/shared/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <div class="logo-wrapper">
       <img class="logo" src="./assets/radar-logo.svg" alt="RADAR-base Logo" />
     </div>
-    <span class="title">CHDR MORE&reg; REST Source Authorizer</span>
+    <span class="title">RADAR-Base REST Source Authorizer</span>
     <ng-container *ngIf="showMenu">
       <button
         mat-icon-button
