--- a/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
@@ -78,6 +78,12 @@
   </div>
 
   <div class="form-group" *ngIf="isEditing">
+    <label for="hasValidToken">Has Valid Token:</label>
+    <input class="form-control" name="hasValidToken" disabled type="text"
+           id="hasValidToken" [value]= "restSourceUser.hasValidToken? 'Yes':'No'">
+  </div>
+
+  <div class="form-group" *ngIf="isEditing">
     <label for="timesReset">Times Reset:</label>
     <input class="form-control" name="timesReset" disabled type="text"
            id="timesReset" [(ngModel)]="restSourceUser.timesReset">
