--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list-delete-dialog.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list-delete-dialog.html
@@ -1,7 +1,8 @@
 <h1 mat-dialog-title>WARNING!</h1>
 <div mat-dialog-content>
   <p>Are you sure you want to delete the user with- <strong>id:</strong> {{data.id}},
-    <strong>user-id:</strong> {{data.userId}} and <strong>project-id:</strong> {{data.projectId}}?
+    <strong>user-id:</strong> {{data.externalId? data.externalId : data.userId}}
+    and <strong>project-id:</strong> {{data.projectId}}?
   </p>
 </div>
 <div mat-dialog-actions>
