--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
@@ -40,11 +40,11 @@
       </ng-container>
       <ng-container matColumnDef="userId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> User ID </th>
-        <td mat-cell *matCellDef="let user"> {{user.userId |  slice:0:8 }}... </td>
+        <td mat-cell *matCellDef="let user"> {{user.externalId? user.externalId : ((user.userId | slice:0:8) + '...')}}</td>
       </ng-container>
       <ng-container matColumnDef="externalUserId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> External User ID </th>
-        <td mat-cell *matCellDef="let user"> {{user.externalUserId}} </td>
+        <td mat-cell *matCellDef="let user"> {{user.serviceUserId}} </td>
       </ng-container>
       <ng-container matColumnDef="startDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
@@ -64,9 +64,9 @@
           <button mat-icon-button color="primary" [routerLink]="['/users', user.id]" ngbTooltip="Info">
             <mat-icon>info</mat-icon>
           </button>
-          <button mat-icon-button color="primary" [routerLink]="['/users', user.id]" ngbTooltip="Edit">
+          <!-- <button mat-icon-button color="primary" [routerLink]="['/users', user.id]" ngbTooltip="Edit">
             <mat-icon>edit</mat-icon>
-          </button>
+          </button> -->
           <button mat-icon-button ngbTooltip="Reset" matTooltip="This will re-pull all the data for this user"
                   color="warn" (click)="openResetDialog(user)">
             <mat-icon>replay</mat-icon>
