--- a/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
@@ -9,12 +9,11 @@
 
 <div *ngIf="restSourceUser" class="container col-md-4">
   <h3 *ngIf="!isEditing">Enter details for User</h3>
-  <!-- <h3 *ngIf="isEditing">Edit details for User</h3> -->
   <h3 *ngIf="isEditing">Details for User</h3>
   <div class="form-group">
     <label for="externalUserId">External User ID:</label>
     <input class="form-control" name="externalUserId" disabled type="text"
-           [(ngModel)]="restSourceUser.externalUserId" id="externalUserId">
+           [(ngModel)]="restSourceUser.serviceUserId" id="externalUserId">
   </div>
 
   <div class="form-group">
@@ -34,9 +33,9 @@
 
   <div class="form-group" *ngIf="restSourceUser.projectId">
     <label for="userId">User ID:</label>
-    <select class="form-control" id="userId" [(ngModel)]="restSourceUser.userId" #userId="ngModel" [disabled]="isEditing">
+    <select class="form-control" id="userId" [(ngModel)]="restSourceUser.externalId? restSourceUser.externalId : restSourceUser.userId" #userId="ngModel" [disabled]="isEditing">
       <option [selected]="true" value="">Select a user</option>
-      <option [value]="user.id" *ngFor="let user of subjects">{{user.id}}</option>
+      <option *ngFor="let user of subjects" [value]="user.externalId? user.externalId : user.id">{{user.externalId? user.externalId : user.id}}</option>
     </select>
   </div>
 
@@ -50,8 +49,6 @@
     <label for="startDate">Start Date:</label>
     <div class="input-group" placement="top"
          ngbTooltip="Start date to collect data from this source">
-      <!-- <input id="startDate" class="form-control" placeholder="yyyy-mm-dd"
-        required name="startDate" [(ngModel)]="startDate" ngbDatepicker #e="ngbDatepicker"> -->
       <input id="startDate" class="form-control" placeholder="yyyy-mm-dd"
         required name="startDate" [(ngModel)]="startDate" ngbDatepicker #e="ngbDatepicker" [disabled]="isEditing">
       <div class="input-group-append">
@@ -65,8 +62,6 @@
     <label for="endDate">End Date:</label>
     <div class="input-group" placement="top"
          ngbTooltip="End date to collect data from this source">
-      <!-- <input id="endDate" class="form-control" placeholder="yyyy-mm-dd"
-             required name="endDate" [(ngModel)]="endDate" ngbDatepicker #d="ngbDatepicker"> -->
       <input id="endDate" class="form-control" placeholder="yyyy-mm-dd"
         required name="endDate" [(ngModel)]="endDate" ngbDatepicker #d="ngbDatepicker" [disabled]="isEditing">
       <div class="input-group-append">
@@ -91,9 +86,6 @@
   <button *ngIf="!isEditing" type="button" (click)="cancelUpdateUser()" class="btn btn-outline-primary"
           style="margin-right: 16px">Cancel
   </button>
-  <!-- <button *ngIf="isEditing" type="button" (click)="backClicked()" class="btn btn-outline-primary"
-          style="margin-right: 16px">Cancel
-  </button> -->
   <button *ngIf="isEditing" type="button" (click)="backClicked()" class="btn btn-outline-primary"
           style="margin-right: 16px">Back
   </button>
@@ -101,7 +93,4 @@
   <button *ngIf="!isEditing && restSourceUser.projectId" type="button" (click)="updateRestSourceUser()"
                    class="btn btn-success">Submit
   </button>
-  <!-- <button *ngIf="isEditing && restSourceUser.projectId" type="button" (click)="updateRestSourceUser()"
-          class="btn btn-success">Save
-  </button> -->
 </div>
